# gdg-menorca-rag

./: .env.example  .gitignore  Makefile  README.md  app.py  pyproject.toml  rag_manager.py  requirements.txt  utils.py
tests/: rag_tests.py
