[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gdg-menorca-rag"
version = "1.0.0"
description = "GDG Menorca Resort - Advanced RAG Management System"
authors = [
    {name = "GDG Menorca", email = "info@gdgmenorca.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["rag", "hotel", "ai", "chatbot", "vertex-ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "google-genai==1.5.0",
    "gradio==5.20.1",
    "google-auth==2.38.0",
    "requests==2.32.3",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "pydantic==2.10.6",
    "click==8.1.8",
    "rich==13.9.4",
    "typer==0.15.2",
    "asyncio-mqtt==0.16.2",
    "python-dotenv==1.0.0",
    "tqdm==4.67.1",
    "structlog==24.1.0",
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
]

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "flake8==7.0.0",
    "mypy==1.7.0",
    "pre-commit==3.5.0",
]

[project.scripts]
rag-manager = "rag_manager:cli"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "dist",
    "build",
    "*.egg",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"




[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true